@@ -1,30 +1,45 @@
 package fr.avenirsesr.portfolio.api.infrastructure.adapter.repository;
 
 import fr.avenirsesr.portfolio.api.domain.model.ProgramProgress;
+import fr.avenirsesr.portfolio.api.domain.model.Student;
 import fr.avenirsesr.portfolio.api.domain.port.output.repository.ProgramProgressRepository;
 import fr.avenirsesr.portfolio.api.infrastructure.adapter.mapper.ProgramProgressMapper;
+import fr.avenirsesr.portfolio.api.infrastructure.adapter.mapper.UserMapper;
 import fr.avenirsesr.portfolio.api.infrastructure.adapter.model.ProgramProgressEntity;
-import fr.avenirsesr.portfolio.api.infrastructure.adapter.specification.ProgramProgressSpecifications;
+import fr.avenirsesr.portfolio.api.infrastructure.adapter.specification.ProgramProgressSpecification;
 import java.util.List;
-import java.util.UUID;
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Component;
 
 @Component
 public class ProgramProgressDatabaseRepository
     extends GenericJpaRepositoryAdapter<ProgramProgress, ProgramProgressEntity>
     implements ProgramProgressRepository {
-
-  private final ProgramProgressJpaRepository jpaRepository;
-
-  protected ProgramProgressDatabaseRepository(ProgramProgressJpaRepository jpaRepository) {
-    super(jpaRepository, ProgramProgressMapper::fromModelToEntity);
-    this.jpaRepository = jpaRepository;
+  public ProgramProgressDatabaseRepository(ProgramProgressJpaRepository jpaRepository) {
+    super(
+        jpaRepository,
+        jpaRepository,
+        ProgramProgressMapper::fromDomain,
+        ProgramProgressMapper::toDomain);
   }
 
   @Override
-  public List<ProgramProgress> getSkillsOverview(UUID userId) {
-    return jpaRepository.findAll(ProgramProgressSpecifications.findByUserId(userId)).stream()
-        .map(ProgramProgressMapper::fromEntityToModel)
-        .toList();
+  public List<ProgramProgress> findAllByStudent(Student student) {
+    return jpaSpecificationExecutor
+        .findAll(ProgramProgressSpecification.hasStudent(UserMapper.fromDomain(student)))
+        .stream()
+        .map(ProgramProgressMapper::toDomain)
+        .collect(Collectors.toList());
+  }
+
+  @Override
+  public List<ProgramProgress> findAllAPCByStudent(Student student) {
+    return jpaSpecificationExecutor
+        .findAll(
+            ProgramProgressSpecification.hasStudent(UserMapper.fromDomain(student))
+                .and(ProgramProgressSpecification.isAPC()))
+        .stream()
+        .map(ProgramProgressMapper::toDomain)
+        .collect(Collectors.toList());
   }
 }
